feat!: split the engine into unruly-engine-core and the MVEL unruly-engine, as named modules (#302)
Co-authored-by: Claude Opus 5 (1M context) <noreply@anthropic.com>